src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Cross Support Ticket</fullName>
        <description>Ticket type for cross-sell/cross-support tickets</description>
        <isActive>true</isActive>
        <values>
            <fullName>**TriTech Statuses**</fullName>
        </values>
        <values>
            <fullName>**Zuercher Statuses**</fullName>
        </values>
        <values>
            <fullName>---------------------------</fullName>
        </values>
        <values>
            <fullName>Appointment Scheduled</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer Verification</fullName>
        </values>
        <values>
            <fullName>Awaiting Future Development</fullName>
        </values>
        <values>
            <fullName>Awaiting Major Release</fullName>
        </values>
        <values>
            <fullName>Awaiting Minor Release</fullName>
        </values>
        <values>
            <fullName>Awaiting Product Review</fullName>
        </values>
        <values>
            <fullName>Awaiting Third Party</fullName>
        </values>
        <values>
            <fullName>By Design</fullName>
        </values>
        <values>
            <fullName>CCB Review</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Creating Ticket</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Customer Initiated Closure</fullName>
        </values>
        <values>
            <fullName>Defect - No Fix Planned</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Engineering Defect</fullName>
        </values>
        <values>
            <fullName>Fixed in Current Release</fullName>
        </values>
        <values>
            <fullName>Fixed in Release</fullName>
        </values>
        <values>
            <fullName>Future Consideration</fullName>
        </values>
        <values>
            <fullName>In GIS</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>In Support</fullName>
        </values>
        <values>
            <fullName>Module Scheduled for New Platform</fullName>
        </values>
        <values>
            <fullName>Not Reproducible</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Opened in Error</fullName>
        </values>
        <values>
            <fullName>Pending Customer Verification</fullName>
        </values>
        <values>
            <fullName>Pending Enhancement</fullName>
        </values>
        <values>
            <fullName>Pending Roadmap Planning</fullName>
        </values>
        <values>
            <fullName>Pending TriTech Verification</fullName>
        </values>
        <values>
            <fullName>Referred to Enhancement Process</fullName>
        </values>
        <values>
            <fullName>Requested Information from Customer</fullName>
        </values>
        <values>
            <fullName>Resolved Pending Further Info</fullName>
        </values>
        <values>
            <fullName>Roadmap Item</fullName>
        </values>
        <values>
            <fullName>Suspend in Progress</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Test Ticket</fullName>
        </values>
        <values>
            <fullName>Tier 1</fullName>
        </values>
        <values>
            <fullName>Tier 2</fullName>
        </values>
        <values>
            <fullName>Tier 3</fullName>
        </values>
        <values>
            <fullName>Waiting on Vendor%2FHardware</fullName>
        </values>
        <values>
            <fullName>Won%27t Complete %2F Implement</fullName>
        </values>
        <values>
            <fullName>Works as Designed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Defect Ticket Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assessing Issue</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed - Fix ready for Patch</fullName>
        </values>
        <values>
            <fullName>Closed - Fix ready for Release</fullName>
        </values>
        <values>
            <fullName>Fix for Release in Progress</fullName>
        </values>
        <values>
            <fullName>Future Consideration</fullName>
        </values>
        <values>
            <fullName>Module Scheduled for New Platform</fullName>
        </values>
        <values>
            <fullName>Patch in Progress</fullName>
        </values>
        <values>
            <fullName>QA complete - Patch</fullName>
        </values>
        <values>
            <fullName>QA complete - Release</fullName>
        </values>
        <values>
            <fullName>Targeted for Future Release</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Enhancement Ticket</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Ticket Process</fullName>
        <description>Non-Zuercher or LETG support ticket process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointment Scheduled</fullName>
        </values>
        <values>
            <fullName>CCB Review</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Creating Ticket</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Defect - No Fix Planned</fullName>
        </values>
        <values>
            <fullName>Engineering Defect</fullName>
        </values>
        <values>
            <fullName>Fixed in Current Release</fullName>
        </values>
        <values>
            <fullName>Fixed in Release</fullName>
        </values>
        <values>
            <fullName>Future Consideration</fullName>
        </values>
        <values>
            <fullName>Module Scheduled for New Platform</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending Customer Verification</fullName>
        </values>
        <values>
            <fullName>Pending Enhancement</fullName>
        </values>
        <values>
            <fullName>Pending Roadmap Planning</fullName>
        </values>
        <values>
            <fullName>Pending TriTech Verification</fullName>
        </values>
        <values>
            <fullName>Referred to Enhancement Process</fullName>
        </values>
        <values>
            <fullName>Requested Information from Customer</fullName>
        </values>
        <values>
            <fullName>Roadmap Item</fullName>
        </values>
        <values>
            <fullName>Suspend in Progress</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Tier 1</fullName>
        </values>
        <values>
            <fullName>Tier 2</fullName>
        </values>
        <values>
            <fullName>Tier 3</fullName>
        </values>
        <values>
            <fullName>Waiting on Vendor%2FHardware</fullName>
        </values>
        <values>
            <fullName>Works as Designed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Work Order Ticket Status</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved - Assigned</fullName>
        </values>
        <values>
            <fullName>Approved - Not Assigned</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Upgrade Completed</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Zuercher Support Ticket Process</fullName>
        <description>Zuercher specific customer support processes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer Verification</fullName>
        </values>
        <values>
            <fullName>Awaiting Future Development</fullName>
        </values>
        <values>
            <fullName>Awaiting Major Release</fullName>
        </values>
        <values>
            <fullName>Awaiting Minor Release</fullName>
        </values>
        <values>
            <fullName>Awaiting Product Review</fullName>
        </values>
        <values>
            <fullName>Awaiting Third Party</fullName>
        </values>
        <values>
            <fullName>By Design</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Creating Ticket</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Customer Initiated Closure</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>In GIS</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>In Support</fullName>
        </values>
        <values>
            <fullName>Not Reproducible</fullName>
        </values>
        <values>
            <fullName>Opened in Error</fullName>
        </values>
        <values>
            <fullName>Resolved Pending Further Info</fullName>
        </values>
        <values>
            <fullName>Test Ticket</fullName>
        </values>
        <values>
            <fullName>Won%27t Complete %2F Implement</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Support_Team__c</fullName>
        <formula>TEXT(Service_Contract_WMP__r.Account_Support_Team_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Support Team is determined by the chosen Service Contract for this ticket. Inform teams support the following:

Inform NC = RMS, FBR, IQ, Analytics, Jail, Legacy VisionAIR

Inform IA = CAD, Mobile

Inform 911 = Only 911</inlineHelpText>
        <label>Account Support Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Time_for_Upgrade_in_hours__c</fullName>
        <inlineHelpText>Enter the actual time in hours it took for the upgrade to complete.</inlineHelpText>
        <label>Actual Time for Upgrade (in hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>After_Hours_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Hours Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_Delivery_Date__c</fullName>
        <label>Anticipated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Go_Live_Date_CAD__c</fullName>
        <label>Anticipated Go Live Date - CAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Go_Live_Date_IQ__c</fullName>
        <label>Anticipated Go Live Date - IQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Go_Live_Date_Jail__c</fullName>
        <label>Anticipated Go Live Date - Jail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Go_Live_Date_Mobile__c</fullName>
        <label>Anticipated Go Live Date - Mobile</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Go_Live_Date_RMS__c</fullName>
        <label>Anticipated Go Live Date - RMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticpated_Delivery_Time__c</fullName>
        <label>Anticipated Delivery Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Sales_Order_Amount__c</fullName>
        <inlineHelpText>If needed for tracking or prioritizing purposes, please enter the applicable sales order value.</inlineHelpText>
        <label>Applicable Sales Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_CAD_BA_Email__c</fullName>
        <description>Pulls Assigned CAD BA user&apos;s email address as listed on the account page for this case.</description>
        <label>Assigned CAD BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associated_JIRA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated via Process Builder - Auto-checks with the ticket status is changed to Awaiting Future Development, Awaiting Major Release, Awaiting Minor Release, Awaiting Product Review, In Progress, In GIS</description>
        <inlineHelpText>Auto-checks when the ticket status is changed to either Awaiting Future Development, Awaiting Major Release, Awaiting Minor Release, Awaiting Product Review, In Progress, or In GIS</inlineHelpText>
        <label>Associated JIRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BA_Services_Tasks__c</fullName>
        <label>BA Services Tasks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD Codefile</fullName>
                </value>
                <value>
                    <fullName>CAD DOLF</fullName>
                </value>
                <value>
                    <fullName>CAD FAT</fullName>
                </value>
                <value>
                    <fullName>CAD FT</fullName>
                </value>
                <value>
                    <fullName>CAD Report Writing</fullName>
                </value>
                <value>
                    <fullName>CAD Resp. Plan Workshop</fullName>
                </value>
                <value>
                    <fullName>CAD SMS</fullName>
                </value>
                <value>
                    <fullName>CAD Supervisor Training</fullName>
                </value>
                <value>
                    <fullName>CAD System Orientation</fullName>
                </value>
                <value>
                    <fullName>CAD Training Orientation</fullName>
                </value>
                <value>
                    <fullName>CAD Train the Trainer</fullName>
                </value>
                <value>
                    <fullName>CAD User Training</fullName>
                </value>
                <value>
                    <fullName>CAD Workshop</fullName>
                </value>
                <value>
                    <fullName>Codefile Build</fullName>
                </value>
                <value>
                    <fullName>Custom RMS Output Forms</fullName>
                </value>
                <value>
                    <fullName>Custom RMS Reports</fullName>
                </value>
                <value>
                    <fullName>Jail DOLF</fullName>
                </value>
                <value>
                    <fullName>Jail End User Training</fullName>
                </value>
                <value>
                    <fullName>Jail FAT</fullName>
                </value>
                <value>
                    <fullName>Jail FT</fullName>
                </value>
                <value>
                    <fullName>Jail Report Writing Training</fullName>
                </value>
                <value>
                    <fullName>Jail System Orientation</fullName>
                </value>
                <value>
                    <fullName>Jail Train-The-Trainer Training</fullName>
                </value>
                <value>
                    <fullName>Jail Workshop</fullName>
                </value>
                <value>
                    <fullName>Mobile Admin</fullName>
                </value>
                <value>
                    <fullName>Mobile FAT</fullName>
                </value>
                <value>
                    <fullName>Mobile FAT/Admin/Train the Trainer</fullName>
                </value>
                <value>
                    <fullName>Mobile System Orientation</fullName>
                </value>
                <value>
                    <fullName>Mobile Train the Trainer</fullName>
                </value>
                <value>
                    <fullName>Mobile Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_Out_Plan__c</fullName>
        <inlineHelpText>911 Upgrade Only</inlineHelpText>
        <label>Back Out Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_Indicator__c</fullName>
        <formula>Account.Bad_Debt_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Notes Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Debt__c</fullName>
        <formula>Account.Bad_Debt_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Box_Log_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required If reproducible</inlineHelpText>
        <label>Black Box Log Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blitz__c</fullName>
        <inlineHelpText>Tracking field for Blitz team working on ticket</inlineHelpText>
        <label>Blitz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Room 1</fullName>
                </value>
                <value>
                    <fullName>Room 2</fullName>
                </value>
                <value>
                    <fullName>Room 3</fullName>
                </value>
                <value>
                    <fullName>Room 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAD_BA_Email__c</fullName>
        <label>CAD BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CCB_MOL_Engineering_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ready to create Engineering Defect</inlineHelpText>
        <label>CCB/MOL Engineering Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDP_Tier_2_Contact__c</fullName>
        <label>CDP Tier 2 Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brittany Burson</fullName>
                </value>
                <value>
                    <fullName>Charles Leonard</fullName>
                </value>
                <value>
                    <fullName>Chip Basham</fullName>
                </value>
                <value>
                    <fullName>Curtis Hill</fullName>
                </value>
                <value>
                    <fullName>Kendall Schrodt</fullName>
                </value>
                <value>
                    <fullName>Liza Wright</fullName>
                </value>
                <value>
                    <fullName>Michael Bouvet</fullName>
                </value>
                <value>
                    <fullName>Randy Wolter</fullName>
                </value>
                <value>
                    <fullName>Stephen Rice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDP_Tier_2_Group__c</fullName>
        <label>CDP Tier 2 Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crimemapping.com</fullName>
                </value>
                <value>
                    <fullName>IQ Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Rehost_Task__c</fullName>
        <label>CIS Rehost List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD.</fullName>
                    <label>CAD</label>
                </value>
                <value>
                    <fullName>CAD Interface(s)</fullName>
                </value>
                <value>
                    <fullName>CAD Relay Server</fullName>
                </value>
                <value>
                    <fullName>CAD RPT/DWH</fullName>
                </value>
                <value>
                    <fullName>CAD Test Environment</fullName>
                </value>
                <value>
                    <fullName>CAD Training Environment</fullName>
                </value>
                <value>
                    <fullName>CAD WEB/Browser</fullName>
                </value>
                <value>
                    <fullName>DR Environment</fullName>
                </value>
                <value>
                    <fullName>IQ</fullName>
                </value>
                <value>
                    <fullName>Jail.</fullName>
                    <label>Jail</label>
                </value>
                <value>
                    <fullName>Jail Test Environment</fullName>
                </value>
                <value>
                    <fullName>Jail Training Environment</fullName>
                </value>
                <value>
                    <fullName>Mobile/Mobile Interface</fullName>
                </value>
                <value>
                    <fullName>Reinstall SQL Replication</fullName>
                </value>
                <value>
                    <fullName>RMS.</fullName>
                    <label>RMS</label>
                </value>
                <value>
                    <fullName>RMS Test Environment</fullName>
                </value>
                <value>
                    <fullName>RMS Training Environment</fullName>
                </value>
                <value>
                    <fullName>Routing Server</fullName>
                </value>
                <value>
                    <fullName>TTMS/CIM</fullName>
                </value>
                <value>
                    <fullName>Build ISR</fullName>
                    <isActive>false</isActive>
                    <label>Build ISR</label>
                </value>
                <value>
                    <fullName>Prep Work</fullName>
                    <isActive>false</isActive>
                    <label>Prep Work</label>
                </value>
                <value>
                    <fullName>Project Scope</fullName>
                    <isActive>false</isActive>
                    <label>Project Scope</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Task_List__c</fullName>
        <label>CIS Task List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD.</fullName>
                    <label>CAD</label>
                </value>
                <value>
                    <fullName>CAD GIS Link Workstation</fullName>
                </value>
                <value>
                    <fullName>CAD Interface Servers</fullName>
                </value>
                <value>
                    <fullName>CAD Reinstall SQL Replication</fullName>
                </value>
                <value>
                    <fullName>CAD Relay Server</fullName>
                </value>
                <value>
                    <fullName>CAD RPT/DWH</fullName>
                </value>
                <value>
                    <fullName>CAD Test</fullName>
                </value>
                <value>
                    <fullName>CAD Training</fullName>
                </value>
                <value>
                    <fullName>CAD WEB/Browser</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>IQ Cloud.</fullName>
                    <label>IQ Cloud</label>
                </value>
                <value>
                    <fullName>IQ Cloud Analytics</fullName>
                </value>
                <value>
                    <fullName>IQ On Prem</fullName>
                </value>
                <value>
                    <fullName>Jail.</fullName>
                    <label>Jail</label>
                </value>
                <value>
                    <fullName>Jail Test</fullName>
                </value>
                <value>
                    <fullName>Jail Training</fullName>
                </value>
                <value>
                    <fullName>Mobile/Mobile Interface</fullName>
                </value>
                <value>
                    <fullName>RMS.</fullName>
                    <label>RMS</label>
                </value>
                <value>
                    <fullName>RMS Test</fullName>
                </value>
                <value>
                    <fullName>RMS Training</fullName>
                </value>
                <value>
                    <fullName>Routing Server</fullName>
                </value>
                <value>
                    <fullName>TTMS/CIM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Choose_applicable_product__c</fullName>
        <description>This is a field for the customer portal page layout which determines the appropriate ticket queue.</description>
        <inlineHelpText>Please choose the applicable product for your current ticket issue.</inlineHelpText>
        <label>Choose applicable product:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform 911</fullName>
                </value>
                <value>
                    <fullName>Inform Analytics</fullName>
                </value>
                <value>
                    <fullName>Inform CAD</fullName>
                </value>
                <value>
                    <fullName>Inform FBR</fullName>
                </value>
                <value>
                    <fullName>Inform IQ</fullName>
                </value>
                <value>
                    <fullName>Inform Jail</fullName>
                </value>
                <value>
                    <fullName>Inform Mobile</fullName>
                </value>
                <value>
                    <fullName>Inform RMS</fullName>
                </value>
                <value>
                    <fullName>TriTech.com IQ</fullName>
                </value>
                <value>
                    <fullName>TriTech.com Analytics</fullName>
                </value>
                <value>
                    <fullName>TriTech.com ePCR</fullName>
                </value>
                <value>
                    <fullName>TriTech.com Billing</fullName>
                </value>
                <value>
                    <fullName>TriTech Message Switch</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond Billing</fullName>
                </value>
                <value>
                    <fullName>Respond CAD</fullName>
                </value>
                <value>
                    <fullName>Respond ePCR</fullName>
                </value>
                <value>
                    <fullName>Sweet CAD</fullName>
                </value>
                <value>
                    <fullName>VisionFBR</fullName>
                </value>
                <value>
                    <fullName>VisionINFORM</fullName>
                </value>
                <value>
                    <fullName>VisionMOBILE</fullName>
                </value>
                <value>
                    <fullName>VisionRMS</fullName>
                </value>
                <value>
                    <fullName>VisionLMS</fullName>
                </value>
                <value>
                    <fullName>VisionFORCE</fullName>
                </value>
                <value>
                    <fullName>VisionJAIL</fullName>
                </value>
                <value>
                    <fullName>VisionCAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Choose_applicable_product_family__c</fullName>
        <inlineHelpText>Please choose the TriTech product family applicable to your ticket and product owned.</inlineHelpText>
        <label>xChoose applicable product family:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>IMC Solutions</fullName>
                </value>
                <value>
                    <fullName>Respond EMS</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>VisiNet Solutions</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Steps_to_Recreate_Issue__c</fullName>
        <description>Client facing field for ticket creation via the customer portal</description>
        <label>CLIENT Steps to Recreate Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>